Textes ok. Manque contraintes et sécu, gestion users, mails

--- a/templates/owlBlog.html.twig
+++ b/templates/owlBlog.html.twig
@@ -97,10 +97,30 @@
 
             <h2 style="padding-bottom:30px;">Partager cet article</h2>
 
-                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/facebookBlue.png"/></div>
-                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/instaBlue.png"/></div>
-                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/twitterBlue.png"/></div>
-                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/linkedinBlue.png"/></div>
+                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                    <a href="https://www.facebook.com/lehibou.quigeek">
+                    <img alt="..." src="../assets/img/logoFacebook.png"/>
+                    </a>
+                </div>
+
+
+                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                    <a href="https://www.instagram.com/hibouquigeek">
+                    <img alt="..." src="../assets/img/logoInstagram.png"/>
+                    </a>
+                </div>
+
+                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                    <a href="https://twitter.com/HibouQui">
+                    <img alt="..." src="../assets/img/logoTwitter.png"/>
+                    </a>
+                </div>
+
+                <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                    <a href="https://www.linkedin.com/in/lehibou-quigeek-3a7402177/">
+                    <img alt="..." src="../assets/img/logoLinkedin.png"/>
+                    </a>
+                </div>
 
                 {#</div>#}
 
