--- a/public/assets/css/owl.css
+++ b/public/assets/css/owl.css
@@ -640,9 +640,23 @@ a:hover, a:focus {
 }
 
 .greyBlock {
-    background-color: #555555;
+    padding:50px 20px 20px;
+    background-color: #212121;
     color: #FFFFFF;
 }
+
+.greyBlock a {
+    color: #ffffff;
+    font-size:18px;
+    font-weight:normal;
+}
+
+.greyBlock li {
+    display: inline;
+    margin-right: 10px;
+    color: #ffffff;
+}
+
 
 .team .flip-container {
     margin-left:auto;
@@ -712,7 +726,7 @@ a:hover, a:focus {
     width: 100%;
     height: 100%;
     min-height:400px;
-    min-width:400px;
+    /*min-width:400px;*/
     font-size:22px;
     opacity:10;
     margin-bottom: 30px;
@@ -730,10 +744,11 @@ a:hover, a:focus {
 }
 
 .speImgDisplay {
-    width: 290px;
+    width: 250px;
     height: 496px;
     opacity:100;
     visibility:visible;
+
 
 
     /*-webkit-transform: rotate(180deg); !* Safari *!*/
@@ -746,17 +761,21 @@ a:hover, a:focus {
 
 .speClose {
     text-align:right;
-    padding-right:20px;
-    padding-top:20px;
-    right:40px;
+    /*padding-right:20px;*/
+    /*padding-top:20px;*/
+    /*right:40px;*/
     color:#FFFFFF;
-    position:absolute;
+    /*position:absolute;*/
 }
 
 .speClose a {
     font-size:30px;
     z-index: 15;
+    color:#FFFFFF;
+    margin: 20px;
 }
+
+
 
 /*--------------------------- Slider ---------------------------------------*/
 
@@ -1057,105 +1076,17 @@ input.form-control::placeholder {
     /*margin-bottom:50px;*/
 }
 
-.devisForm {
-    color:#113441;
+.devisForm p {
+    color:#000000;
     font-size:18px;
+    margin-bottom:0;
 }
 
-@media (max-width: 930px) {
+.devisFormCont {
 
-    p {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    .big-text {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    .open.dropdown-menu a {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    #textAreaDevis::placeholder {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    input.form-control::placeholder {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    .dropdown-toggle.btn {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    .btn,
-    .navbar .navbar-nav > li > a.btn {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    .section .title-area .description {
-        font-size: 18px;
-        line-height: 23px;
-    }
-
-    .title-area {
-        text-align: justify;
-
-    }
-
-    .content-blog p {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    a {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    p {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    h1 {
-        font-size: 55px;
-    }
-
-    h2 {
-        font-size: 20px;
-        line-height: 30px;
-    }
-
-    .speDisplay h2 {
-        font-size: 20px;
-        line-height: 30px;
-    }
-
-    .form-check, label {
-        font-size: 15px;
-        line-height: 23px;
-    }
-
-    .blogResume {
-        padding: 40px;
-    }
-
-    .row {
-        text-align: center;
-    }
-
-    .devisForm {
-        font-size:16px;
-    }
 }
+
+
 
 .accessButton {
     margin-bottom:30px;
@@ -1634,10 +1565,10 @@ fieldset.scheduler-border {
 
 }
 
-.socialImg img {
-    width:50px;
-    height:50px;
-}
+/*.socialImg img {*/
+    /*width:50px;*/
+    /*height:50px;*/
+/*}*/
 
 @media (max-width: 471px) {
     .socialImg img {
@@ -1670,4 +1601,174 @@ fieldset.scheduler-border {
     .logoOwl img {
         width:71px;
     }
+
+    h1 {
+        font-size: 55px;
+    }
+
+    .container {
+        padding-right:0;
+        padding-left:0;
+    }
+}
+
+@media (max-width: 930px) {
+
+    p {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    .big-text {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    .open.dropdown-menu a {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    #textAreaDevis::placeholder {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    input.form-control::placeholder {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    .dropdown-toggle.btn {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    .btn,
+    .navbar .navbar-nav > li > a.btn {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    .section .title-area .description {
+        font-size: 18px;
+        line-height: 23px;
+    }
+
+    .title-area {
+        text-align: justify;
+
+    }
+
+    .content-blog p {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    a {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    p {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    h1 {
+        font-size: 55px;
+    }
+
+    h2 {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .speDisplay h2 {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .form-check, label {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+    .blogResume {
+        padding: 40px;
+    }
+
+    .row {
+        text-align: center;
+    }
+
+    .devisForm {
+        font-size:16px;
+    }
+
+    .description p {
+        font-size: 15px;
+    }
+
+    .noActive .active {
+        transform: none;
+    }
+}
+
+
+.formBlock .btn {
+    width:220px;
+    border-radius:4px;
+    color:#000000;
+}
+
+
+
+
+
+@media (max-width: 1006px) {
+
+
+    .speClose {
+        text-align : center;
+    }
+    .speTitle {
+        text-align : center;
+    }
+    /*.speImgDisplay {*/
+    /*width: 200px;*/
+    /*}*/
+
+}
+
+@media (max-width: 931px) {
+#prospect_information_prospect_information::placeholder {
+    font-size:15px;
+    }
+}
+
+
+#my_osm_widget_map { /* use the same name as <div id=""> */
+    width: 100%; /* important! if you need full width display */
+    height: 600px;
+    margin: 0;
+    border-radius: 5px;
+    /* ... */
+}
+
+.section-address a {
+    font-size: 18px;
+    font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-bottom : 60px;
+}
+
+
+.section-address li:hover {
+    background:transparent;
+}
+
+.section-address .glyphicon {
+    font-size: 30px;
+    margin-bottom : 60px;
+    margin-right:20px;
 }
