--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
 
-    <title>{% block title %}Asso{% endblock %}</title>
+    <title>{% block title %}Le hibou qui geek{% endblock %}</title>
 
     {% block stylesheets %}
 
@@ -37,6 +37,7 @@
         <link href="{{ asset('assets/css/anim.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/owl.css') }}" rel="stylesheet" />
 
+        <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.css" />
         {#<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">#}
 
     {% endblock %}
@@ -106,28 +107,28 @@
 
     {% block footer %}
 
-        <footer class="footer footer-big footer-color-black greyBlock" data-color="black">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-3">
-                        <li><a style="color:#bbb;" href={{ path('adminArticle') }}>Gestion des articles</a></li>
-                        <li><a style="color:#bbb;" href={{ path('adminProspect') }}>Suivi des prospects</a></li>
-
+        <footer class="footer greyBlock">
+            {#<div class="container">#}
+                {#<div class="row">#}
+                    <div class="col-md-9 col-sm-9 col-xs-12" style="text-align:left;">
+                        <li><a href={{ path('adminArticle') }}>CGV</a></li>
+                        <li><a style="color:#bbb;" href={{ path('adminProspect') }}>CGU</a></li>
+                        <li><a style="color:#bbb;" href={{ path('adminProspect') }}>Cookie</a></li>
+                        <li><a style="color:#bbb;" href={{ path('adminProspect') }}>RGPD</a></li>
+                        <li><a style="color:#bbb;" href={{ path('adminProspect') }}>Administration</a></li>
                     </div>
 
-                    <div class="col-md-3 col-sm-3">
+                    <div class="col-md-3 col-sm-3" style="text-align:right;">
+                        <li><a style="color:#ffffff;">Le hibou qui geek 2018</a></li>
                     </div>
-                    <div class="col-md-2 col-md-offset-1 col-sm-3">
-                    </div>
-                </div>
-                <hr>
-                <div class="copyright">
-                    ©
-                    <script>
-                        document.write(new Date().getFullYear())
-                    </script> Creative Tim, made with love
-                </div>
-            </div>
+                {#</div>#}
+                {#<div class="copyright">#}
+                    {#©#}
+                    {#<script>#}
+                        {#document.write(new Date().getFullYear())#}
+                    {#</script> Creative Tim, made with love#}
+                {#</div>#}
+            {#</div>#}
         </footer>
 
     {% endblock %}
