--- a/templates/owlAgency.html.twig
+++ b/templates/owlAgency.html.twig
@@ -146,16 +146,42 @@
                 <h2>Quelques chiffres clés en 2018</h2>
             </div>
 
-            <div class="row">
+            <div class="team2 divServiceBlock">
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                        <div class="row">
+                            <div class="col-md-4 col-sm-6 serviceBlock">
+                                <div class = "imgService">
+                                    <img src="../assets/img/logo4.png" class="image-header">
+                                </div>
 
+                                <p style="font-size:40px">15</p>
+                                <p>Identités visuelles crées ou refondées</p>
 
+                            </div>
+
+                            <div class="col-md-4 col-sm-6 serviceBlock">
+                                <div class = "imgService">
+
+                                    <img src="../assets/img/logo5.png" class="image-header">
+                                </div>
+                                <p style="font-size:40px">8</p>
+                                <p>Sites réalisés</p>
+                            </div>
+
+                            <div class="col-md-4 col-sm-6 serviceBlock">
+                                <div class = "imgService">
+
+                                    <img src="../assets/img/logo6.png" class="image-header">
+                                </div>
+                                <p style="font-size:40px">19</p>
+                                <p>Sites audités</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            {#<div class="col-md-12 text-center" style="height:50px;">#}
-                {#<button type="button" class="btn btn-fill btn-owl">#}
-                    {#Subscribe#}
-                {#</button>#}
-            {#</div>#}
 
         </div>
     </div>
