--- a/templates/owlContact.html.twig
+++ b/templates/owlContact.html.twig
@@ -81,17 +81,34 @@
                     <div class="col-md-4 col-md-offset-4 col-xs-12 text-center networksIconDiv" style="padding-top:0;">
 
                         <div class="row">
-                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/facebook.png"/></div>
-                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/instagram.png"/></div>
-                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/twitter.png"/></div>
-                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center"> <img alt="..." src="../assets/img/linkedin.png"/></div>
+                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                                <a href="https://www.facebook.com/lehibou.quigeek">
+                                <img alt="..." src="../assets/img/logoFacebookB.png"/>
+                                </a>
+                            </div>
+                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                                <a href="https://www.instagram.com/hibouquigeek">
+                                <img alt="..." src="../assets/img/logoInstagramB.png"/>
+                                </a>
+                            </div>
+
+                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                                <a href="https://twitter.com/HibouQui">
+                                <img alt="..." src="../assets/img/logoTwitterB.png"/>
+                                </a>
+                            </div>
+                            <div class="col-md-3 col-sm-3 col-xs-3 col-3 socialImg" style="text-align:center">
+                                <a href="https://www.linkedin.com/in/lehibou-quigeek-3a7402177/">
+                                <img alt="..." src="../assets/img/logoLinkedinB.png"/>
+                                </a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="col-md-4 col-xs-12 text-center">
                         <div class="col-md-12 text-center" style="height:60px; margin-top:80px;">
                             <div>
-                                <a class="btn btn-fill btn-owl"  href={{ path('owlContactDisplay')}}>
+                                <a class="btn btn-fill btn-owl"  href={{ path('owlContactDisplay')}}#quoteAnchor>
                                     Défiez-nous !
                                 </a>
 
@@ -279,7 +296,7 @@
                                 </div>
 
                                 {{ form_end(formContactDisplay) }}
-                                <button class="form-control btn btn-fill btn-rose validContactForm" style="width:125px;">Valider</button>
+                                <button class="form-control btn btn-fill btn-rose validContactForm" style="width:125px;">Envoyer</button>
 
 
                             </div>
@@ -294,7 +311,7 @@
         </div>
 
 
-        <div class="contactForm2" id="quote" style="position:absolute; text-align:center; width:100%;" >
+        <div class="contactForm2" id="quoteAnchor" style="position:absolute; text-align:center; width:100%;" >
             <div class="container">
                 <div class="formBlock contactForm2">
                     <div class="col-lg-6 col-md-6 col-sm-8 col-xs-10 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">
@@ -303,11 +320,11 @@
 
                             <h2>Demande de devis</h2>
 
-                            <p style="margin-right:10px;margin-left:10px;">Nous vous recontacterons dans les meilleurs délais pour vous donner la meilleure expertise </p>
+                            <p style="margin-right:10px;margin-left:10px;color:#000000;">Nous vous recontacterons dans les meilleurs délais pour vous donner la meilleure expertise </p>
 
-                            <div class="card1-header card1-header-rose card1-header-icon">
+                            <div class="card1-header card1-header-rose card1-header-icon devisFormCont">
                                 <div class="card1-icon devisForm">
-                                    <i>Vos informations</i>
+                                    <p>Vos informations</p>
                                 </div>
                             </div>
 
@@ -396,7 +413,7 @@
                             <div>
 
                                 <div class="card1-footer " style="padding:0.9375rem 20px;">
-                                    {{ form_row(formQuote.save2, {'attr': {'class' : 'form-control btn btn-fill btn-rose'},'label': 'Valider'}) }}
+                                    {{ form_row(formQuote.save2, {'attr': {'class' : 'form-control btn btn-fill btn-rose'},'label': 'Envoyer'}) }}
                                 </div>
 
                                 {{ form_end(formQuote) }}
@@ -412,6 +429,34 @@
 
         <div class="section beigeBlock section-our-team" style="height:1100px;"></div>
 
+        <div class="blueBlock section section-address" style="padding-top:0; padding-bottom:0;">
+                <div class="row">
+
+                    <div class="col-md-4" style="height:600px;">
+
+                        <div style="padding: 20%;">
+                        <li style="margin-bottom:0;"><a style="margin-bottom:0;"><span style="margin-bottom:0;" class="glyphicon glyphicon-map-marker"></span>92 avenue des Champs Elysées</a></li>
+                        <li><a><span style="color:#113441;" class="glyphicon glyphicon-map-marker"></span>75018 Paris</a></li>
+
+                            <li><a><span class=" glyphicon glyphicon-earphone "></span>06.05.87.18.18</a></li>
+                            <li><a><span class="glyphicon glyphicon-send"></span>lehibouquigeek@gmail.com</a></li>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-8">
+                        <div  id="my_osm_widget_map">
+
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
 
 
 
@@ -425,9 +470,29 @@
 {% block javascripts %}
 
     {{ parent() }}
+
+    <script src="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.js"></script>
+
     <script src="assets/js/plugins/bootstrap-selectpicker.js" ></script>
 
     <script>
+
+        // markersArray=[{
+        //     "lat":48.8713722,
+        //     "lon":2.301316199999974,
+        //     "text":"Essai"
+        // }];
+
+        // markersArray.push({
+        //     "lat":48.8713722,
+        //     "lon":2.301316199999974,
+        //     "text":"Essai"
+        // });
+
+        // markersArray=[[48.8713722, 2.301316199999974,"Essai"]];
+
+        mapDisplay();
+
 
         var nextDate = "";
 
@@ -523,10 +588,57 @@
 
             }
 
-        })
+        });
 
         //--------------------------------------------------------------------------------------------------------
+        //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Affichage de la carte ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+        function mapDisplay() {
+
+
+            var mymap = L.map('my_osm_widget_map', { /* use the same name as your <div id=""> */
+                center: [48.8713722, 2.301316199999974], /* set GPS Coordinates */
+                zoom: 17, /* define the zoom level */
+                zoomControl: false, /* false = no zoom control buttons displayed */
+                scrollWheelZoom: false /* false = scrolling zoom on the map is locked */
+            });
+
+            L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiaGVsdmllIiwiYSI6ImNqbHE3dmswNzBpeG4zcHJtcDlsYzlsam0ifQ.ZhDZxIiUHk0Kg61GjvU1Jw', { /* set your personal MapBox Access Token */
+                maxZoom: 20, /* zoom limit of the map */
+                // attribution: 'Données &copy; Contributeurs <a href="http://openstreetmap.org">OpenStreetMap</a> + ' +
+                //     '<a href="http://mapbox.com">Mapbox</a> | ' +
+                //     '<a href="https://creativecommons.org/licenses/by/2.0/">CC-BY</a> ' +
+                //     'Guillaume Rouan 2016', /* set the map's caption */
+                id: 'mapbox.streets' /* mapbox.light / dark / streets / outdoors / satellite */
+            }).addTo(mymap);
+
+            L.marker([48.8713722, 2.301316199999974]).addTo(mymap); /* set your location's GPS Coordinates : [LAT,LON] */
+            // var mymap = L.map('my_osm_widget_map', {
+            //     /* use the same name as your <div id=""> */
+            //     center: [markersArray[0]["lat"], markersArray[0]["lon"]], /* set GPS Coordinates */
+            //     zoom: 20, /* define the zoom level */
+            //     zoomControl: true, /* false = no zoom control buttons displayed */
+            //     scrollWheelZoom: false /* false = scrolling zoom on the map is locked */
+            // });
+            //
+            // L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiaGVsdmllIiwiYSI6ImNqbHE3dmswNzBpeG4zcHJtcDlsYzlsam0ifQ.ZhDZxIiUHk0Kg61GjvU1Jw', {
+            //     /* set your personal MapBox Access Token */
+            //     maxZoom: 20, /* zoom limit of the map */
+            //     attribution: 'Données &copy; Contributeurs <a href="http://openstreetmap.org">OpenStreetMap</a> + ' +
+            //         '<a href="http://mapbox.com">Mapbox</a> | ' +
+            //         '<a href="https://creativecommons.org/licenses/by/2.0/">CC-BY</a> ' +
+            //         'Guillaume Rouan 2016', /* set the map's caption */
+            //     id: 'mapbox.streets' /* mapbox.light / dark / streets / outdoors / satellite */
+            // }).addTo(mymap);
+            //
+            // // L.marker([lat, lon]).addTo(mymap);
+            //
+            // $.each(markersArray, function (index, element) {
+            //     L.marker([element.lat, element.lon]).bindPopup('<b>' + element.text + '</b>').addTo(mymap);
+            // })
+        }
 
 
     </script>
